--- a/simtools.ini
+++ b/simtools.ini
@@ -90,7 +90,7 @@ cpu_per_task = 1
 memory_per_cpu = 2048 # MB of memory
 
 # Which email to send the notifications to
-notification_email = bentoh@northwestern.edu
+notification_email = irene.huang@northwestern.edu
 # Partition to use
 #partition = short
 partition = b1139
